testdata/baselines/reference/submodule/compiler/stringIncludes.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
stringIncludes.ts(2,20): error TS2339: Property 'includes' does not exist on type '"abcde"'.
stringIncludes.ts(3,20): error TS2339: Property 'includes' does not exist on type '"abcde"'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== stringIncludes.ts (2 errors) ====
    var includes: boolean;
    includes = "abcde".includes("cd");
                       ~~~~~~~~
!!! error TS2339: Property 'includes' does not exist on type '"abcde"'.
    includes = "abcde".includes("cd", 2);
                       ~~~~~~~~
!!! error TS2339: Property 'includes' does not exist on type '"abcde"'.